--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -6,8 +6,7 @@ on:
       - 'v*'
 
 jobs: 
-  build:
-    name: Build binaries
+  build-and-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,13 +17,6 @@ jobs:
           go-version: '1.21'
       - name: Build
         run: make build
-  
-  release:
-    name: Release binaries
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
